clusters/arcanis/slskd-name-reservation-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd-name-reservation-bot
  namespace: slskd-name-reservation-bot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: slskd-name-reservation-bot
  template:
    metadata:
      labels:
        app: slskd-name-reservation-bot
    spec:
      containers:
      - name: gluetun
        image: qmcgaw/gluetun:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        startupProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - wget -q -T 5 -O /dev/null http://127.0.0.1:9999 || exit 1
          periodSeconds: 10
          failureThreshold: 18
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - wget -q -T 5 -O /dev/null http://127.0.0.1:9999 || exit 1
          periodSeconds: 30
          failureThreshold: 2
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - wget -q -T 5 -O /dev/null http://127.0.0.1:9999 || exit 1
          periodSeconds: 15
          failureThreshold: 2
          timeoutSeconds: 5
        ports:
        volumeMounts:
        - name: gluetun
          mountPath: /gluetun
      - name: slskd-name-reservation-bot
        image: ghcr.io/samhatter/slskd-name-reservation-bot:latest
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: gluetun
        hostPath:
          path: /storage/appdata/slskd-name-reservation-bot/gluetun
          type: DirectoryOrCreate
      - name: app
        hostPath:
          path: /storage/appdata/slskd-name-reservation-bot/app
          type: DirectoryOrCreate
      - name: usernames
