clusters/arcanis/slskd-name-reservation-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd-name-reservation-bot
  namespace: slskd-name-reservation-bot
spec:
  selector:
    app: slskd-name-reservation-bot
